# homebot

./: .gitignore  Cargo.toml  README.md
.gitea/workflows/: package.yml
.github/workflows/: release.yml  release_artifact.yml  rust.yml
crates/core/: Cargo.toml
crates/core/src/: main.rs  telegram_api.rs
crates/core/src/handlers/: downloader.rs  healthcheck.rs  mod.rs  torrent.rs
crates/core/src/handlers/youtube2rss/: metadata.rs  mod.rs
crates/handler_core/: Cargo.toml
crates/handler_core/src/: lib.rs
crates/handlers/: Cargo.toml
crates/handlers/downloader/: Cargo.toml
crates/handlers/downloader/src/: lib.rs
crates/handlers/healthcheck/: Cargo.toml
crates/handlers/src/: healthcheck.rs  lib.rs  torrent.rs
crates/handlers/src/youtube2rss/: mod.rs
crates/handlers/torrent/: Cargo.toml
crates/handlers/torrent/src/: lib.rs
crates/handlers/youtube2rss/: Cargo.toml
crates/handlers/youtube2rss/src/: lib.rs  s3_storage.rs  youtube_sdk.rs
crates/telegram_api/: Cargo.toml
crates/telegram_api/src/: lib.rs  telegram_api.rs
src/: main.rs  telegram_api.rs  torrent.rs
src/handlers/: downloader.rs  healthcheck.rs  mod.rs  torrent.rs  youtube2rss.rs
src/handlers/youtube2rss/: metadata.rs  mod.rs  s3_storage.rs  youtube_sdk.rs
