[workspace.package]
version = "0.1.0"
authors = ["Kirill Gusakov <kgusakov@gmail.com>"]
edition = "2024"

[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/telegram_api",
    "crates/handler_core",
    "crates/handlers/downloader",
    "crates/handlers/torrent",
    "crates/handlers/youtube2rss",
    "crates/handlers/healthcheck",
]

[workspace.dependencies]
core = { path = "crates/core" }
telegram_api = { path = "crates/telegram_api" }
handler_core = { path = "crates/handler_core" }
downloader = { path = "crates/handlers/downloader" }
torrent = { path = "crates/handlers/torrent" }
youtube2rss = { path = "crates/handlers/youtube2rss" }
healthcheck = { path = "crates/handlers/healthcheck" }

