[workspace.package]
version = "0.1.0"
authors = ["Kirill Gusakov <kgusakov@gmail.com>"]
edition = "2024"

[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/telegram_api",
    "crates/handler_core",
    "crates/handlers/downloader",
    "crates/handlers/torrent",
    "crates/handlers/youtube2rss",
    "crates/handlers/healthcheck",
]

[workspace.dependencies]
core = { path = "crates/core" }
telegram_api = { path = "crates/telegram_api" }
handler_core = { path = "crates/handler_core" }
downloader = { path = "crates/handlers/downloader" }
torrent = { path = "crates/handlers/torrent" }
youtube2rss = { path = "crates/handlers/youtube2rss" }
healthcheck = { path = "crates/handlers/healthcheck" }


reqwest = { version = "0.13.2", features = ["json", "socks", "blocking", "multipart"] }
serde_json = "1.0.149"

serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.1", features = ["full"] }

log = "0.4"
env_logger = "0.11.10"

futures = { version = "0.3.32", features = ["compat"] }

anyhow = "1.0.102"

lazy_static = "1.4.0"

async-trait = "0.1.36"

shlex = "1.3.0"
base64 = "0.22.1"
chrono = "0.4.44"
regex = "1"
rmp-serde = "1.3.1"
rss = "2.0.12"
rusoto_s3 = "0.48.0"
rusoto_core = "0.48.0"
bytes = "1.11.1"