[package]
name = "core"
version.workspace = true
edition.workspace = true

[[bin]]
name = "homebot"
path = "src/main.rs"

[features]
default = ["healthcheck"]
healthcheck = []
torrent = []
youtube2rss = []
downloader = []

[dependencies]
telegram_api.workspace = true
handler_core.workspace = true
downloader.workspace = true
healthcheck.workspace = true
torrent.workspace = true
youtube2rss.workspace = true

reqwest = { version = "0.10", features = ["json", "socks", "blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }

log = "0.4"
env_logger = "0.7.1"

bytes = "0.5.4"

serde_json = "1.0"

base64 = "0.12.1"

rusoto_s3 = "0.44"
rusoto_core = "0.44"

regex = "1"

futures = { version = "0.3", features = ["compat"] }

rmp-serde = "1.3.1"

rss = "1.9.0"

anyhow = "1.0.31"

chrono = "0.4.11"

lazy_static = "1.4.0"

async-trait = "0.1.36"

shlex = "1.3.0"
