[package]
name = "core"
version.workspace = true
edition.workspace = true

[[bin]]
name = "homebot"
path = "src/main.rs"

[features]
default = ["healthcheck"]
healthcheck = []
torrent = []
youtube2rss = []
downloader = []

[dependencies]
telegram_api.workspace = true
handler_core.workspace = true
downloader.workspace = true
healthcheck.workspace = true
torrent.workspace = true
youtube2rss.workspace = true

reqwest.workspace = true
serde.workspace = true 
tokio.workspace = true
log.workspace = true 
env_logger.workspace = true 
serde_json.workspace = true
futures.workspace = true 
anyhow.workspace = true 
lazy_static.workspace = true 
async-trait.workspace = true 
