[package]
name = "core"
version.workspace = true
edition.workspace = true

[[bin]]
name = "homebot"
path = "src/main.rs"

[features]
default = ["healthcheck"]
healthcheck = ["dep:healthcheck"]
torrent = ["dep:torrent"]
youtube2rss = ["dep:youtube2rss"]
downloader = ["dep:downloader"]

[dependencies]
telegram_api.workspace = true
handler_core.workspace = true
downloader = { workspace = true, optional = true }
healthcheck = { workspace = true, optional = true }
torrent = { workspace = true, optional = true }
youtube2rss = { workspace = true, optional = true }

reqwest.workspace = true
serde.workspace = true 
tokio.workspace = true
log.workspace = true 
env_logger.workspace = true 
serde_json.workspace = true
futures.workspace = true 
anyhow.workspace = true 
lazy_static.workspace = true 
async-trait.workspace = true 
