[package]
name = "handlers"
version.workspace = true
edition.workspace = true

[features]
default = ["healthcheck"]
healthcheck = []
torrent = []
youtube2rss = []
downloader = []

[dependencies]
telegram_api.workspace = true
handler_core.workspace = true

tokio = { version = "0.2", features = ["full"] }
lazy_static = "1.4.0"
anyhow = "1.0.31"
log = "0.4"
shlex = "1.3.0"
async-trait = "0.1.36"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
rusoto_s3 = "0.44"
rusoto_core = "0.44"
reqwest = { version = "0.10", features = ["json", "socks", "blocking"] }
regex = "1"
rss = "1.9.0"
chrono = "0.4.11"
base64 = "0.12.1"
serde_json = "1.0"
