[package]
name = "downloader"
version.workspace = true
edition.workspace = true

[dependencies]
telegram_api.workspace = true
handler_core.workspace = true

tokio.workspace = true
anyhow.workspace = true
log.workspace = true
shlex.workspace = true
async-trait.workspace = true
serde.workspace = true
reqwest.workspace = true
base64.workspace = true
serde_json.workspace = true
