[package]
name = "torrent"
version.workspace = true
edition.workspace = true

[dependencies]
telegram_api.workspace = true
handler_core.workspace = true

reqwest.workspace = true

tokio.workspace = true
anyhow.workspace = true
log.workspace = true
async-trait.workspace = true
serde.workspace = true
base64.workspace = true
serde_json.workspace = true

