[package]
name = "youtube2rss"
version.workspace = true
edition.workspace = true

[dependencies]
telegram_api.workspace = true
handler_core.workspace = true

tokio.workspace = true
anyhow.workspace = true
log.workspace = true
shlex.workspace = true
async-trait.workspace = true
rmp-serde.workspace = true
serde.workspace = true
rusoto_s3.workspace = true
rusoto_core.workspace = true
reqwest.workspace = true
regex.workspace = true
rss.workspace = true
chrono.workspace = true
base64.workspace = true
serde_json.workspace = true
